Fixed float problem for portfolio images. 🎉

--- a/work.html
+++ b/work.html
@@ -69,8 +69,8 @@
     <div class="container">
       <section class="work-showcase">
         <div class="row">
-          <div class="seven columns u-pull-right"><img src="img/work-portfolio.png" class="work-image" alt="my portfolio site"></div>
-          <div class="five columns u-pull-left">
+          <div class="six columns u-pull-right"><img src="img/work-portfolio.png" class="work-image" alt="my portfolio site"></div>
+          <div class="six columns u-pull-left">
             <div class="work-content text-left">
               <h2 class="work-client">Portfolio</h2>
               <ul class="work-role text-left">
@@ -86,8 +86,8 @@
 
       <section class="work-showcase">
         <div class="row">
-          <div class="seven columns u-pull-left"><img src="img/work-placeholder.png" class="work-image" alt="placeholder"></div>
-          <div class="work-content five columns u-pull-right">
+          <div class="six columns u-pull-left"><img src="img/work-placeholder.png" class="work-image" alt="placeholder"></div>
+          <div class="work-content six columns u-pull-right">
             <h2 class="work-client text-left">Client</h2>
             <ul class="work-role text-left">
               <li>Web Design</li>
