--- a/work.html
+++ b/work.html
@@ -71,8 +71,8 @@
         <div class="row">
           <div class="six columns u-pull-right"><img src="img/work-portfolio.png" class="work-image" alt="my portfolio site"></div>
           <div class="six columns u-pull-left">
-            <div class="work-content text-left">
-              <h2 class="work-client">Portfolio</h2>
+            <div class="work-content">
+              <h2 class="work-client text-left">Portfolio</h2>
               <ul class="work-role text-left">
                 <li>Web Design</li>
                 <li>Web Development</li>
