Updated meta description. Fixed weird margin on work-showcase columns. Made 404 page.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
     <title>Amy Kotas | Front End Web Developer</title>
-    <meta name="description" content="">
+    <meta name="description" content="I'm Amy. I build websites.">
     <meta name="author" content="Amy Kotas">
 
     <!-- Mobile Specific Metas
