--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Contact &ndash; Amy Kotas</title>
-  <meta name="description" content="">
+  <meta name="description" content="I'm Amy. I build websites.">
   <meta name="author" content="Amy Kotas">
 
   <!-- Mobile Specific Metas
