--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Work &ndash; Amy Kotas</title>
-  <meta name="description" content="">
+  <meta name="description" content="I'm Amy. I build websites.">
   <meta name="author" content="Amy Kotas">
 
   <!-- Mobile Specific Metas
@@ -78,17 +78,17 @@
                 <li>Web Development</li>
               </ul>
               <p>Version 2.0 of my website built for the new year. 🎉 Designed with Figma, and built upon the lightweight Skeleton CSS framework.</p>
-              <a href="#" class="button button-primary">Visit Website</a>
+              <a href="index.html" class="button button-primary">Visit Website</a>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="work-showcase">
+      <!--<section class="work-showcase">
         <div class="row">
           <div class="six columns u-pull-left"><img src="img/work-placeholder.png" class="work-image" alt="placeholder"></div>
           <div class="work-content six columns u-pull-right">
-            <h2 class="work-client text-left">Client</h2>
+            <h2 class="work-client text-left">Coming Soon</h2>
             <ul class="work-role text-left">
               <li>Web Design</li>
               <li>Web Development</li>
@@ -96,7 +96,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque perferendis labore, saepe magnam praesentium maiores quam.</p>
             <button class="button button-primary">Visit Website</button>
           </div>
-        </div> <!-- /.row -->
+        </div>--> <!-- /.row -->
       </section>
     </div> <!-- / .container -->
   </div> <!-- / #work -->
