Hid empty portfolio section on work.html.

--- a/work.html
+++ b/work.html
@@ -97,7 +97,7 @@
             <button class="button button-primary">Visit Website</button>
           </div>
         </div>--> <!-- /.row -->
-      </section>
+      <!--</section>-->
     </div> <!-- / .container -->
   </div> <!-- / #work -->
 
