--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
       </div>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
-          <li><a rel="author" rel="author" href="about.html">About</a></li>
+          <li><a rel="author" href="about.html">About</a></li>
           <li><a href="work.html">Work</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
