--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
       </div>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
-          <li><a rel="author" rel="author" href="about.html">About</a></li>
+          <li><a rel="author" href="about.html">About</a></li>
           <li><a href="work.html">Work</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -95,7 +95,8 @@
       <label for="exampleMessage">Message</label>
       <textarea class="u-full-width" placeholder="Tell me about your project… *" id="exampleMessage"></textarea>
       <input class="button-primary" type="submit" value="Submit">
-    </form>
+      </form>
+    </div>
   </section>
 
   <!-- Start Footer Section -->
