Adding Formspree contact form functionality. Created thank you page.

--- a/thanks.html
+++ b/thanks.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Contact &ndash; Amy Kotas</title>
+  <title>Thanks &ndash; Amy Kotas</title>
   <meta name="description" content="I'm Amy. I build websites.">
   <meta name="author" content="Amy Kotas">
 
@@ -60,49 +60,21 @@
   <!-- Start Hero Header Section -->
   <section class="hero-header u-full-width">
     <div class="container">
-        <h1 class="animated fadeInUp">Contact</h1>
+      &nbsp;
     </div>
   </section>
 
-  <!-- Start Work Section -->
-  <section class="contactForm">
+  <!-- Start 404 Section -->
+  <section class="gray">
     <div class="container">
       <div class="row">
-        <p class="text-center">Use the form below or email hello [at] amykotas [dot] com.</p>
-      </div>
-      <form id="contactform" action="//formspree.io/amy.e.kotas@gmail.com" method="POST">
-      <div class="row">
-        <div class="six columns">
-          <label for="exampleNameInput">Your name *</label>
-          <input class="u-full-width" type="text" name="name" required placeholder="Name" id="exampleNameInput">
-        </div>
-        <div class="six columns">
-          <label for="exampleEmailInput">Your email *</label>
-          <input class="u-full-width" type="email" name="_replyto" required placeholder="Email address" id="exampleEmailInput">
+        <div class="seven columns u-pull-left"><img src="img/highFive.gif" class="u-full-width" alt="Liz Lemon high five animated"></div>
+        <div class="five columns u-pull-right">
+          <h2 class="text-left">Thank You</h2>
+          <p>Your message was sent. I try to reply within 24-48 hours during weekdays.</p>
+          <a href="index.html" class="button button-primary">Return to the Homepage</a>
         </div>
       </div>
-      <div class="row">
-        <div class="six columns">
-          <label for="examplePhoneInput">Phone number</label>
-          <input class="u-full-width" type="tel" placeholder="(123) 456-7890" id="examplePhoneInput">
-        </div>
-        <div class="six columns">
-          <label for="exampleWebsiteInput">Website</label>
-          <input class="u-full-width" type="url" placeholder="yoursite.com" id="exampleWebsiteInput">
-        </div>
-        <p>* Required</p>
-      </div>
-      <label for="exampleMessage">Message</label>
-      <textarea class="u-full-width" name="message" placeholder="Tell me about your project… *" id="exampleMessage"></textarea>
-      <input class="button-primary" type="submit" value="Send">
-      <input type="hidden" name="_next" value="thanks.html">
-      <input type="hidden" name="_subject" value="Website contact">
-      <input type="text" name="_gotcha" style="display:none">
-      </form>
-      <script>
-    var contactform =  document.getElementById('contactform');
-    contactform.setAttribute('action', '//formspree.io/' + 'your' + '@' + 'email' + '.' + 'com');
-</script>
     </div>
   </section>
 
