Changed something in form on contact.html

--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
       <div class="row">
         <p class="text-center">Use the form below or email hello [at] amykotas [dot] com.</p>
       </div>
-      <form id="contactform" action="//formspree.io/amy.e.kotas@gmail.com" method="POST">
+      <form id="contactform" action="//formspree.io/aekotas@gmail.com" method="POST">
       <div class="row">
         <div class="six columns">
           <label for="exampleNameInput">Your name *</label>
