Fixed problem with console window on index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="container">
           <h1 class="animated fadeInUp">Hi, I'm Amy.</h1>
           <div class="eight columns offset-by-two">
-            <div id="frame"></div>
+            <div id="frame">
               <div id="console"><span class="prompt">$</span><span class="typed"></span></div>
           </div>
       </div>
