Trying to fix formspree form. Deleted prism.js for now.

--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
       <div class="row">
         <p class="text-center">Use the form below or email hello [at] amykotas [dot] com.</p>
       </div>
-      <form id="contactform" action="//formspree.io/hello@amykotas.com" method="POST">
+      <form id="contactform" action="https://formspree.io/hello@amykotas.com" method="POST">
       <div class="row">
         <div class="six columns">
           <label for="exampleNameInput">Your name *</label>
