--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
       <div class="row">
         <p class="text-center">Use the form below or email hello [at] amykotas [dot] com.</p>
       </div>
-      <form id="contactform" action="https://formspree.io/aekotas@gmail.com" method="POST">
+      <form id="contactform" action="https://formspree.io/your@email.com" method="POST">
       <div class="row">
         <div class="six columns">
           <label for="exampleNameInput">Your name *</label>
@@ -112,7 +112,7 @@
 </body>
 <script>
     var contactform =  document.getElementById('contactform');
-    contactform.setAttribute('action', '//formspree.io/' + 'your' + '@' + 'email' + '.' + 'com');
+    contactform.setAttribute('action', '//formspree.io/' + 'aekotas' + '@' + 'gmail' + '.' + 'com');
 </script>
 <!-- End Body –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
