--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <h1 class="animated fadeInUp">Hi, I'm Amy.</h1>
           <div class="eight columns offset-by-two">
             <div id="frame">
-              <div id="console"><span class="prompt">$</span><span class="typed"></span></div>
+              <div id="console"><span class="prompt">></span><span class="typed"></span></div>
           </div>
       </div>
     </section>
