--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Contact &ndash; Amy Kotas</title>
-  <meta name="description" content="I'm Amy. I build websites.">
-  <meta name="author" content="Amy Kotas">
+  <title>Contact &ndash; Matt Kerchner</title>
+  <meta name="description" content="I'm Matt. I write code.">
+  <meta name="author" content="Matt Kerchner">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -33,19 +33,6 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/scripts.js"></script>
-
-  <!-- Google Analytics
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-46853025-1', 'auto');
-  ga('send', 'pageview');
-
-  </script>
 </head>
 
 <!-- Begin Body –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -54,7 +41,7 @@
   <header class="navigation">
     <div class="nav-container">
       <div class="brand">
-        <a href="index.html"><img src="img/signature.svg" alt="Amy Kotas" width="200" height="53"></a>
+        <a href="index.html"><img src="img/signature.svg" alt="Matt Kerchner" width="200" height="53"></a>
       </div>
       <nav> <!-- Main Navigation -->
         <div class="nav-mobile">
@@ -62,7 +49,7 @@
       </div>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a rel="author" href="about.html">About</a></li>
           <li><a href="work.html">Work</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -81,7 +68,7 @@
   <section class="contactForm">
     <div class="container">
       <div class="row">
-        <p class="text-center">Use the form below or email hello [at] amykotas [dot] com.</p>
+        <p class="text-center">Use the form below or email manafount [at] gmail [dot] com.</p>
       </div>
       <form id="contactform" action="https://formspree.io/your@email.com" method="POST">
       <div class="row">
@@ -117,27 +104,17 @@
 
   <!-- Start Footer Section -->
   <footer class="text-center">
-    <a href="https://twitter.com/amykotas" class="social-icon"><i class="fa fa-twitter fa-2x"></i></a>
-    <a href="https://github.com/amykotas" class="social-icon"><i class="fa fa-github fa-2x"></i></a>
-    <a href="https://www.linkedin.com/in/amykotas" class="social-icon"><i class="fa fa-linkedin fa-2x"></i></a>
-    <h6>Design &amp; <a href="https://github.com/amykotas/portfolio-2017">code</a> by Amy Kotas. &nbsp; &copy; 2017</h6>
+    <a href="https://github.com/manafount" class="social-icon"><i class="fa fa-github fa-2x"></i></a>
+    <a href="https://www.linkedin.com/in/matthew-kerchner" class="social-icon"><i class="fa fa-linkedin fa-2x"></i></a>
+    <a href="https://angel.co/matthew-kerchner" class="social-icon"><i class="fa fa-angellist fa-2x"></i></a>
   </footer>
 </body>
+
 <script>
     var contactform =  document.getElementById('contactform');
-    contactform.setAttribute('action', '//formspree.io/' + 'aekotas' + '@' + 'gmail' + '.' + 'com');
+    contactform.setAttribute('action', '//formspree.io/' + 'manafount' + '@' + 'gmail' + '.' + 'com');
 </script>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-46853025-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 <!-- End Body –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
 </html>
