more broken link fixes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script>
     $(function(){
       $(".typed").typed({
-        strings: ["I build websites.", "I create bots.", "I write code."],
+        strings: ["I build websites.", "I write code."],
         typeSpeed: 10
       });
     });
@@ -83,7 +83,8 @@
             <img class="u-max-full-width" src="img/matt.jpg" alt="portrait of Matt">
           </div>
           <div class="eight columns">
-            <p class="lead">I'm a Full Stack Web Developer based in San Francisco. Currently looking for my next opportunity!</p>
+            <p class="lead">I'm a Full Stack Web Developer based in San Francisco. I'm a coffee addict and Cat Dad.
+            <p>Currently looking for my next opportunity!</p>
             <a rel="author" href="about.html" class="button button-primary">Read More →</a>
           </div>
         </div>
