--- a/work.html
+++ b/work.html
@@ -70,7 +70,7 @@
     <div class="container">
       <section class="work-showcase">
         <div class="row">
-          <div class="six columns u-pull-right"><img src="img/work-portfolio.png" class="work-image" alt="Manasana preview image"></div>
+          <div class="six columns u-pull-right"><img src="img/manasana.png" class="work-image" alt="Manasana preview image"></div>
           <div class="six columns u-pull-left">
             <div class="work-content">
               <h2 class="work-client text-left">Manasana</h2>
@@ -81,7 +81,7 @@
               </ul>
               <p>Manasana is a Full-Stack Asana clone with a React Front End and a Rails Back End. It features User Authentication, Team Membership, Project Creation/Deletion, and Shared Tasks.</p>
               <a href="https://manasana.herokuapp.com" class="button button-primary">live</a>
-              <a href="https://github.com/manafount/manasana" class="button button-primary">github</a>
+              <a href="https://github.com/manafount/manasana" class="button button-primary"><i class="fa fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -89,7 +89,7 @@
 
       <section class="work-showcase">
         <div class="row">
-          <div class="six columns u-pull-right"><img src="img/work-portfolio.png" class="work-image" alt="Manasana preview image"></div>
+          <div class="six columns u-pull-right"><img src="img/ticker-tycoon.png" class="work-image" alt="Manasana preview image"></div>
           <div class="six columns u-pull-left">
             <div class="work-content">
               <h2 class="work-client text-left">Ticker Tycoon</h2>
@@ -100,16 +100,16 @@
                 <li>Rails</li>
               </ul>
               <p>Ticker Tycoon is a paper trading app created in React Native. User authentication and profile data is facilitated through a Rails API. User sessions are stored in LocalStorage. Charts are drawn with Highcharts, and data is sourced from Yahoo Finance and Google Finance.</p>
-              <a href="https://manasana.herokuapp.com" class="button button-primary">live</a>
-              <a href="https://github.com/manafount/manasana" class="button button-primary">github</a>
+              <a href="https://kevinmoore9.github.io/ticker-tycoon/" class="button button-primary">live</a>
+              <a href="https://github.com/kevinmoore9/ticker-tycoon" class="button button-primary"><i class="fa fa-github"></i></a>
             </div>
           </div>
         </div>
-      <section>
+      </section>
 
       <section class="work-showcase">
         <div class="row">
-          <div class="six columns u-pull-right"><img src="img/work-portfolio.png" class="work-image" alt="Manasana preview image"></div>
+          <div class="six columns u-pull-right"><img src="img/poker.png" class="work-image" alt="Manasana preview image"></div>
           <div class="six columns u-pull-left">
             <div class="work-content">
               <h2 class="work-client text-left">Poker</h2>
@@ -121,25 +121,31 @@
               </ul>
               <p>Poker is a single-player poker game based on the 5 card draw rules. Features include a Fisher-Yates shuffling algorithm to ensure random hands, as well as shuffle and card flip/draw animations with EaselJS.</p>
               <a href="https://mkerch.io/poker" class="button button-primary">live</a>
-              <a href="https://github.com/manafount/poker" class="button button-primary">github</a>
+              <a href="https://github.com/manafount/poker" class="button button-primary"><i class="fa fa-github"></i></a>
             </div>
           </div>
         </div>
-      <section>
-      <!--<section class="work-showcase">
+      </section>
+
+      <section class="work-showcase">
         <div class="row">
-          <div class="six columns u-pull-left"><img src="img/work-placeholder.png" class="work-image" alt="placeholder"></div>
-          <div class="work-content six columns u-pull-right">
-            <h2 class="work-client text-left">Coming Soon</h2>
-            <ul class="work-role text-left">
-              <li>Web Design</li>
-              <li>Web Development</li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque perferendis labore, saepe magnam praesentium maiores quam.</p>
-            <button class="button button-primary">Visit Website</button>
+          <div class="six columns u-pull-right"><img src="img/algorithm-racer.png" class="work-image" alt="Manasana preview image"></div>
+          <div class="six columns u-pull-left">
+            <div class="work-content">
+              <h2 class="work-client text-left">Algorithm Racer</h2>
+              <ul class="work-role text-left">
+                <li>Rails</li>
+                <li>React</li>
+                <li>Codemirror Editor</li>
+                <li>Node VM</li>
+              </ul>
+              <p>Algorithm Racer allows users to test search and sort algorithms in Javascript. It uses the Codemirror Editor for syntax highlighting, and runs user-submitted code safely in a Node VM instance. Submitted algorithms are scored on speed and brevity and added to a leaderboard.</p>
+              <a href="https://algorithm-racer.herokuapp.com/" class="button button-primary">live</a>
+              <a href="https://github.com/gettinToasty/algorithm-racer" class="button button-primary"><i class="fa fa-github"></i></a>
+            </div>
           </div>
-        </div>--> <!-- /.row -->
-      <!--</section>-->
+        </div>
+      </section>
     </div> <!-- / .container -->
   </div> <!-- / #work -->
 
