color palette changes

--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
         <p>* Required</p>
       </div>
       <label for="exampleMessage">Message</label>
-      <textarea class="u-full-width" name="message" placeholder="Tell me about your project… *" id="exampleMessage"></textarea>
+      <textarea class="u-full-width" name="message" placeholder="Tell me about your company!" id="exampleMessage"></textarea>
       <input class="button-primary" type="submit" value="Send">
       <input type="hidden" name="_next" value="thanks.html">
       <input type="hidden" name="_subject" value="Website contact">
