fixing more broken links

--- a/work.html
+++ b/work.html
@@ -120,7 +120,7 @@
                 <li>HTML/CSS</li>
               </ul>
               <p>Poker is a single-player poker game based on the 5 card draw rules. Features include a Fisher-Yates shuffling algorithm to ensure random hands, as well as shuffle and card flip/draw animations with EaselJS.</p>
-              <a href="mkerch.io/poker" class="button button-primary">live</a>
+              <a href="http://mkerch.io/poker" class="button button-primary">live</a>
               <a href="https://github.com/manafount/poker" class="button button-primary"><i class="fa fa-github"></i></a>
             </div>
           </div>
