disabling onesignal for now

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
       });
     });
 
-    let OneSignal = window.OneSignal || [];
-    OneSignal.push(["init", {
-      appId: "2e1310e6-01fc-48b4-9607-31e8c0775ec7",
-      autoRegister: false,
-      notifyButton: {
-        enable: true /* Set to false to hide */
-      }
-    }]);
+    // let OneSignal = window.OneSignal || [];
+    // OneSignal.push(["init", {
+    //   appId: "2e1310e6-01fc-48b4-9607-31e8c0775ec7",
+    //   autoRegister: false,
+    //   notifyButton: {
+    //     enable: true /* Set to false to hide */
+    //   }
+    // }]);
   </script>
   </head>
 
